header z-index fix

--- a/app/assets/stylesheets/partials/_header.css.scss
+++ b/app/assets/stylesheets/partials/_header.css.scss
@@ -2,6 +2,8 @@ header {
 	width: 100%;
 	margin: 20px auto 0 auto;
 	text-align: center;
+	position: relative;
+	z-index: 1; // background
 
 	.logo {
 		width: 152px; height: 120px;
